Change PDNS_API_BASE URL to HTTPS

--- a/pnl/admn.html
+++ b/pnl/admn.html
@@ -216,7 +216,7 @@
 /* ================== CONFIG ====================
    Replace these with your provided values (they are pre-filled)
    =================================================*/
-const PDNS_API_BASE = "http://nic.int.yt:8081/api/v1/servers/localhost"; // user-provided
+const PDNS_API_BASE = "https://nic.int.yt:8081/api/v1/servers/localhost"; // user-provided
 const PDNS_API_KEY = "SuperSecretKey123"; // user-provided
 const DEFAULT_ZONE = "int.yt."; // user-provided (trailing dot)
 const APP_PASSWORD = "intadmin"; // requested password
